// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroBanner should render with many props assigned 1`] = `
<div
  className="HeroBanner test Container secondary fullViewportHeight"
  style={
    Object {
      "backgroundImage": "linear-gradient(rgba(33, 48, 69, 0.65),rgba(33, 48, 69, 0.65)), url(https://s3.amazonaws.com/operationcode-assets/heroBanner/stock_family-2.jpg)",
    }
  }
>
  <div
    className="content"
  >
    <h1
      className="underline"
    >
      Test
    </h1>
    Testing 123
  </div>
</div>
`;

exports[`HeroBanner should render with required props 1`] = `
<div
  className="HeroBanner Container secondary"
  style={
    Object {
      "backgroundImage": "linear-gradient(rgba(33, 48, 69, 0.65),rgba(33, 48, 69, 0.65)), url(https://s3.amazonaws.com/operationcode-assets/heroBanner/stock_family-2.jpg)",
    }
  }
>
  <div
    className="content"
  >
    <h1
      className=""
    >
      Test
    </h1>
  </div>
</div>
`;
